fix(sfui2-457): fix scrollbar overlapping  container (#343)

--- a/packages/sfui/styles/components/VsfSlider.scss
+++ b/packages/sfui/styles/components/VsfSlider.scss
@@ -14,7 +14,7 @@
   @apply relative w-full flex items-center;
 
   &__container {
-    @apply scroll-smooth flex gap-4 h-full overflow-x-auto scroll-p-7;
+    @apply scroll-smooth flex gap-4 h-full overflow-x-auto scroll-p-7 pb-4;
     @media (prefers-reduced-motion: reduce) {
       scroll-behavior: auto !important;
     }
